--- a/pom.xml
+++ b/pom.xml
@@ -40,15 +40,6 @@
 
 	</dependencies>
 	
-	<build>
-	<plugins>
-	<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<version>2.19</version>
-
-					</plugin>
-	</plugins>
-	</build>
+	<build><pluginManagement><plugins> <plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><configuration><source>1.8</source><target>1.8</target></configuration></plugin>                 <plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-surefire-plugin</artifactId><version>3.0.0-M5</version><configuration>                         <suiteXmlFiles><suiteXmlFile>testng_DDT.xml</suiteXmlFile><!-- <suiteXmlFile>testng_DDT.xml</suiteXmlFile><suiteXmlFile>testng_DDT.xml</suiteXmlFile> --></suiteXmlFiles>                     </configuration> </plugin></plugins></pluginManagement></build>
 
 </project>
