--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
 
 
 	</dependencies>
-	
+
 	<build>
 		<pluginManagement>
 			<plugins>
@@ -50,18 +50,18 @@
 						<source>1.8</source>
 						<target>1.8</target>
 					</configuration>
-				</plugin>                 
+				</plugin>
+
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>3.0.0-M5</version>
-					<configuration>                         
+					<configuration>
 						<suiteXmlFiles>
 							<suiteXmlFile>testng_DDT.xml</suiteXmlFile>
-							<!-- <suiteXmlFile>testng_DDT.xml</suiteXmlFile>
-<suiteXmlFile>testng_DDT.xml</suiteXmlFile> -->
-						</suiteXmlFiles>                     
-					</configuration> 
+							<!-- <suiteXmlFile>testng_DDT.xml</suiteXmlFile><suiteXmlFile>testng_DDT.xml</suiteXmlFile> -->
+						</suiteXmlFiles>
+					</configuration>
 				</plugin>
 			</plugins>
 		</pluginManagement>
